# Functional-KPI

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  SAVE_DATA_INSTRUCTIONS.md  SHAREPOINT_SETUP.md  app.js  extract-data.html  index.html  kpi-dashboard.html  package.json  sharepoint-server.js  sharepoint_server.py  start-sharepoint.sh  styles.css  vite.config.js
apps/kpi-functional-dashboard-backend/: .cursorrules  .gitignore  Dockerfile  README.md  env_template.sh  push_to_vault.sh  pyproject.toml  setup_database.py  vanna_postgres_training_data.yaml  vanna_sqlite_training_data.yaml
apps/kpi-functional-dashboard-backend/configs/: config-local.yaml  config-prod.yaml
apps/kpi-functional-dashboard-backend/eval_data/: sample_eval_set.json
apps/kpi-functional-dashboard-backend/src/nat_react_agent_blueprint/: custom_evaluator.py  custom_evaluator_register.py  eci_search_tool.py  generate_sql_query_and_retrieve_tool.py  register.py  vanna_manager.py  vanna_milvus.py  vanna_nim.py  vanna_openai.py  vanna_util.py
data secure/: EXCEL-FORMAT-GUIDE.txt  README.txt
src/: App.css  App.jsx  index.css
